tests/build/cases/widget/invalid_special.stderr
error: unknown special value,  expected `unset!`
  --> cases/widget/invalid_special.rs:10:18
   |
10 |         margin = foo!;
   |                  ^^^

warning: unused import: `zero_ui::properties::margin`
 --> cases/widget/invalid_special.rs:5:9
  |
5 |     use zero_ui::properties::margin;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
help: consider adding a `#[cfg(test)]` to the containing module
 --> cases/widget/invalid_special.rs:4:1
  |
4 | pub mod test_widget {
  | ^^^^^^^^^^^^^^^^^^^
